# desafio-senior-backend-developer

./: .github  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  start_dev.py  stop_services.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
core/: __init__.py
core/entities/: document.py  task.py  transport_card.py  user.py
core/exceptions/: base.py  document_exceptions.py  task_exceptions.py  transport_exceptions.py  user_exceptions.py
core/interfaces/: repositories.py  security.py
core/use_cases/: chatbot_use_cases.py  document_use_cases.py  task_use_cases.py  transport_card_use_cases.py  user_use_cases.py
infrastucture/api/dtos/: chatbot_dtos.py  document_dtos.py  transport_dtos.py  user_dtos.py
infrastucture/database/: __init__.py  base.py  init_db.py  init_enum.py  models.py  session.py
infrastucture/migrations/: env.py
infrastucture/repositories/: document_repository.py  transport_card_repository.py  user_repository.py
infrastucture/security/: dependencies.py  mfa.py  password.py  token.py
migrations/: env.py
migrations/versions/: 2f02c8adf67b_add_mfa_fields_to_users_table.py  add_auth_provider_fields.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py  test_auth_api.py  test_db_integration.py  test_health.py
tests/unit/: __init__.py  test_auth_router.py  test_user_use_cases.py
utils/: __init__.py  start_dev.py  stop_services.py  utils.py
(+8 files in other folders)
